# go-mmo-poc

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
.github/workflows/: ci.yaml
client/: BUILD.bazel  client.go
client-ebitengine/: BUILD.bazel  client.go
game/: BUILD.bazel  game.go
metadata-server/: BUILD.bazel  main.go
proto/: BUILD.bazel  metadata.pb.go  metadata.proto  metadata_grpc.pb.go  mmo.pb.go  mmo.proto
server/: BUILD.bazel  client.go  hub.go  server.go
