# MODULE.bazel
module(
    name = "go_mmo_poc",
    version = "0.1.0",
)

# --- Define Bazel Module Dependencies ---

# Go Rules & SDK
bazel_dep(name = "rules_go", version = "0.50.1") # Ensure version is correct/exists
bazel_dep(name = "gazelle", version = "0.42.0")

# Protobuf Rules
bazel_dep(name = "rules_proto", version = "7.0.2") # Ensure version is correct/exists

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_hajimehoshi_ebiten_v2",
    "org_golang_google_protobuf",
)

# --- Register Go Toolchain ---
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1") # Ensure version matches rules_go requirements if necessary