load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client-ebitengine_lib",
    srcs = ["client.go"],
    importpath = "github.com/irishsmurf/go-mmo-poc/client-ebitengine",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_hajimehoshi_ebiten_v2//:ebiten",
        "@com_github_hajimehoshi_ebiten_v2//ebitenutil",
        "@com_github_hajimehoshi_ebiten_v2//inpututil",
        "@com_github_hajimehoshi_ebiten_v2//vector",
        "//proto:mmo_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "client-ebitengine",
    embed = [":client-ebitengine_lib"],
    visibility = ["//visibility:public"],
)
