load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/irishsmurf/go-mmo-poc/client",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_irishsmurf_go_mmo_poc//proto:go_default_library",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
