# proto/BUILD.bazel

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

# Define the Protobuf source files
proto_library(
    name = "mmo_proto",
    srcs = ["mmo.proto"],
    visibility = ["//visibility:public"],
)

# Generate Go code from the proto_library
go_proto_library(
    name = "mmo_go_proto",
    importpath = "github.com/irishsmurf/go-mmo-poc/proto",
    proto = ":mmo_proto",
    visibility = ["//visibility:public"],
)

# Gazelle needs to know about proto rules to avoid overwriting
# gazelle:proto_strip_import_prefix / # For old rules_proto
# gazelle:proto disable # For newer rules_proto, tell gazelle to ignore .proto files